==> just1step/STM32H7xx/Src/ioports_analog.c <==
#include "driver.h"
#define PWM_OUT0 1
#define PWM_OUT0 0
#define PWM_OUT1 1
#define PWM_OUT1 0
#define DAC_OUT0 1
#define DAC_OUT0 0
#define DAC_OUT1 1
#define DAC_OUT1 0
#define AUX_ANALOG_PWM_OUT (PWM_OUT0 + PWM_OUT1)
#define AUX_ANALOG_DAC_OUT (DAC_OUT0 + DAC_OUT1)
#define AUX_ANALOG_OUT (AUX_ANALOG_PWM_OUT + AUX_ANALOG_DAC_OUT)
#include "grbl/ioports.h"
#include "stm32h7xx_ll_dac.h"

static bool dac_init (xbar_t *output, pwm_config_t *config, bool persistent)
{
    const dac_map_t *port;

    if((port = dac_get_port(aux_out_analog[output->id].port, aux_out_analog[output->id].pin))) {

        __HAL_RCC_DAC12_CLK_ENABLE();
        __HAL_RCC_GPIOA_CLK_ENABLE();

        GPIO_InitTypeDef GPIO_InitStruct = {
            .Pin = 1 << port->pin,
            .Mode = GPIO_MODE_ANALOG,
            .Pull = GPIO_NOPULL
        };

        HAL_GPIO_Init(port->port, &GPIO_InitStruct);

        LL_DAC_Enable(port->dac, port->ch);
        LL_DAC_ConvertData12RightAligned(port->dac, port->ch, 0);
    }

    if(port == NULL && !aux_out_analog[output->id].mode.claimed)
        hal.port.claim(Port_Analog, Port_Output, &output->id, "N/A");

    return !!port;
}

static void pwm_out (uint8_t port, float value)
{
    if(port < analog.out.n_ports && aux_out_analog[port].pwm) {

        uint_fast16_t pwm_value = ioports_compute_pwm_value(&aux_out_analog[port].pwm->data, value);
        const pwm_signal_t *pwm = aux_out_analog[port].pwm->port;

        aux_out_analog[port].pwm->value = value;

        if(pwm_value == aux_out_analog[port].pwm->data.off_value) {
            if(aux_out_analog[port].pwm->data.always_on) {
                *pwm->ccr = aux_out_analog[port].pwm->data.off_value;
                if(IS_TIMER_BDTR(pwm->timer))
                    pwm->timer->BDTR |= TIM_BDTR_MOE;
                *pwm->ccr = 0;
            } else {
                if(IS_TIMER_BDTR(pwm->timer))
                    pwm->timer->BDTR |= TIM_BDTR_MOE;
                *pwm->ccr = 0;
            }
        } else {
            *pwm->ccr = pwm_value;
            if(IS_TIMER_BDTR(pwm->timer))
                pwm->timer->BDTR |= TIM_BDTR_MOE;
        }
    }
}

static inline int32_t adc_read (ADC_HandleTypeDef *adc, uint32_t channel)
{
    int32_t value = -1;

    if(adc) {

        if(adc_config.Channel != channel) {
            adc_config.Channel = channel;
            HAL_ADC_ConfigChannel(adc, &adc_config);
        }

        if(HAL_ADC_Start(adc) == HAL_OK && HAL_ADC_PollForConversion(adc, 2) == HAL_OK)
            value = (int32_t)HAL_ADC_GetValue(adc);
    }

    return value;
}

void ioports_init_analog (pin_group_pins_t *aux_inputs, pin_group_pins_t *aux_outputs)
{
    io_analog_t ports = {
        .ports = &analog,
#if AUX_ANALOG_OUT
        .analog_out = analog_out,
#endif
        .get_pin_info = get_pin_info,
        .wait_on_input = wait_on_input,
        .set_pin_description = set_pin_description
    };

    aux_in_analog = aux_inputs->pins.inputs;
    aux_out_analog = aux_outputs->pins.outputs;

    analog.in.n_ports = aux_inputs->n_pins;
    analog.out.n_ports = aux_outputs->n_pins;

    if(ioports_add_analog(&ports)) {

        if(analog.in.n_ports) {

            GPIO_InitTypeDef gpio_init = {
                .Mode = GPIO_MODE_ANALOG,
                .Pull = GPIO_NOPULL
            };

            uint_fast8_t i;

            for(i = 0; i < analog.in.n_ports; i++) {

                uint_fast8_t j = sizeof(adc_map) / sizeof(adc_map_t);

                do {
                    j--;
                    if(adc_map[j].port == aux_inputs->pins.inputs[i].port && adc_map[j].pin == aux_inputs->pins.inputs[i].pin) {

                        ADC_HandleTypeDef *adc;

                        if((adc = calloc(sizeof(ADC_HandleTypeDef), 1))) {

                            if(adc_map[j].alt == 3)
                                __HAL_RCC_ADC3_CLK_ENABLE();
                            else
                                __HAL_RCC_ADC12_CLK_ENABLE();

                            gpio_init.Pin = aux_inputs->pins.inputs[i].bit;
                            HAL_GPIO_Init(aux_inputs->pins.inputs[i].port, &gpio_init);

                            adc_config.Channel = aux_inputs->pins.inputs[i].channel = adc_map[j].ch;

#if defined(STM32H723xx) || defined(STM32H725xx)
                            if(adc_map[j].alt == 3)
                                adc_config.SamplingTime = ADC3_SAMPLETIME_2CYCLES_5;
                            else
                                adc_config.SamplingTime = ADC_SAMPLETIME_2CYCLES_5;
#endif

                            adc->Instance = adc_map[j].adc;
                            adc->Init.ClockPrescaler = ADC_CLOCK_SYNC_PCLK_DIV4;
                            adc->Init.Resolution = ADC_RESOLUTION_12B;
                            adc->Init.ScanConvMode = DISABLE;
                            adc->Init.ContinuousConvMode = DISABLE;
                            adc->Init.DiscontinuousConvMode = DISABLE;
                            adc->Init.ExternalTrigConvEdge = ADC_EXTERNALTRIGCONVEDGE_NONE;
                            adc->Init.ExternalTrigConv = ADC_SOFTWARE_START;
                            //adc->Init.DataAlign = ADC_DATAALIGN_RIGHT;    // Valid for ADC3 only on H7 parts
                            adc->Init.NbrOfConversion = 1;
                            //adc->Init.DMAContinuousRequests = DISABLE;    // Valid for ADC3 only on H7 parts
                            adc->Init.EOCSelection = ADC_EOC_SINGLE_CONV;
                            if(HAL_ADC_Init(adc) == HAL_OK &&
                               HAL_ADC_ConfigChannel(adc, &adc_config) == HAL_OK &&
                               HAL_ADCEx_Calibration_Start(adc, ADC_CALIB_OFFSET_LINEARITY, ADC_SINGLE_ENDED) == HAL_OK) {
                                aux_inputs->pins.inputs[i].adc = adc;
                            }
                            else
                                analog.in.n_ports--;
                        }
                        break;
                    }
                } while(j);
            }
        }

#if AUX_ANALOG_OUT

        if(analog.out.n_ports) {

            xbar_t *pin;
            uint_fast8_t i;
            pwm_config_t config = {
                .freq_hz = 5000.0f,
                .min = 0.0f,
                .max = 100.0f,
                .off_value = 0.0f,
                .min_value = 0.0f,
                .max_value = 100.0f,
                .invert = Off
            };

            hal.port.analog_out = analog_out;

            for(i = 0; i < analog.out.n_ports; i++) {
                if((pin = get_pin_info(Port_Output, i)))
                    pin->config(pin, &config, false);
            }
        }

#endif // AUX_ANALOG_OUT
    }
}

void ioports_init_analog (pin_group_pins_t *aux_inputs, pin_group_pins_t *aux_outputs)
{
// NOOP
}
