==> chenglianshu/GD32F4xx/Src/ioports_analog.c <==
#include "driver.h"
#define PWM_OUT0 1
#define PWM_OUT0 0
#define PWM_OUT1 1
#define PWM_OUT1 0
#define PWM_OUT2 1
#define PWM_OUT2 0
#define DAC_OUT0 1
#define DAC_OUT0 0
#define DAC_OUT1 1
#define DAC_OUT1 0
#define AUX_ANALOG_PWM_OUT (PWM_OUT0 + PWM_OUT1 + PWM_OUT2)
#define AUX_ANALOG_DAC_OUT (DAC_OUT0 + DAC_OUT1)
#define AUX_ANALOG_OUT (AUX_ANALOG_PWM_OUT + AUX_ANALOG_DAC_OUT)
#include "pwm.h"
#include "grbl/ioports.h"

static bool dac_init (xbar_t *output, pwm_config_t *config, bool persistent)
{
    const dac_map_t *port;

    if((port = dac_get_port(aux_out_analog[output->id].port, aux_out_analog[output->id].pin))) {

        rcu_periph_clock_enable(RCU_DAC);
        rcu_periph_clock_enable(RCU_GPIOA);

        gpio_mode_set((uint32_t)port->port, GPIO_MODE_ANALOG, GPIO_PUPD_NONE, 1U << port->pin);

        dac_enable(port->dac);
        dac_data_set(port->dac, DAC_ALIGN_12B_R, 0);
    }

    if(port == NULL && !aux_out_analog[output->id].mode.claimed)
        hal.port.claim(Port_Analog, Port_Output, &output->id, "N/A");

    return !!port;
}

static void pwm_out (uint8_t port, float value)
{
    if(port < analog.out.n_ports && aux_out_analog[port].pwm) {

        uint_fast16_t pwm_value = ioports_compute_pwm_value(&aux_out_analog[port].pwm->data, value);
        const pwm_signal_t *pwm = aux_out_analog[port].pwm->port;

        aux_out_analog[port].pwm->value = value;

        if(pwm_value == aux_out_analog[port].pwm->data.off_value) {
            if(aux_out_analog[port].pwm->data.always_on) {
                *pwm->ccr = aux_out_analog[port].pwm->data.off_value;
                if(pwm->timer == timerN(0) || pwm->timer == timerN(7))
                    TIMER_CCHP(pwm->timer) |= TIMER_CCHP_POEN;
                *pwm->ccr = 0;
            } else {
                if(pwm->timer == timerN(0) || pwm->timer == timerN(7))
                    TIMER_CCHP(pwm->timer) |= TIMER_CCHP_POEN;
                *pwm->ccr = 0;
            }
        } else {
            *pwm->ccr = pwm_value;
            if(pwm->timer == timerN(0) || pwm->timer == timerN(7))
                TIMER_CCHP(pwm->timer) |= TIMER_CCHP_POEN;
        }
    }
}

static inline int32_t adc_read (uint32_t adc, uint32_t channel)
{
    int32_t value = -1;
    int idx;

    if(adc && (idx = adc_index(adc)) >= 0) {

        if(adc_last_channel[idx] != channel) {
            adc_regular_channel_config(adc, 0, (uint8_t)channel, ADC_SAMPLETIME_3);
            adc_last_channel[idx] = channel;
        }

        adc_software_trigger_enable(adc, ADC_REGULAR_CHANNEL);

        uint32_t timeout = hal_get_tick() + 2;
        while((RESET == adc_flag_get(adc, ADC_FLAG_EOC)) && hal_get_tick() <= timeout);

        if(adc_flag_get(adc, ADC_FLAG_EOC))
            value = (int32_t)adc_regular_data_read(adc);
    }

    return value;
}

void ioports_init_analog (pin_group_pins_t *aux_inputs, pin_group_pins_t *aux_outputs)
{
    io_analog_t ports = {
        .ports = &analog,
#if AUX_ANALOG_OUT
        .analog_out = analog_out,
#endif
        .get_pin_info = get_pin_info,
        .wait_on_input = wait_on_input,
        .set_pin_description = set_pin_description
    };

    aux_in_analog = aux_inputs->pins.inputs;
    aux_out_analog = aux_outputs->pins.outputs;

    analog.in.n_ports = aux_inputs->n_pins;
    analog.out.n_ports = aux_outputs->n_pins;

    if(ioports_add_analog(&ports)) {

        if(aux_inputs->n_pins) {

            uint_fast8_t i;
            bool adc_initialized[3] = {false, false, false};

            for(i = 0; i < aux_inputs->n_pins; i++) {

                uint_fast8_t j = sizeof(adc_map) / sizeof(adc_map_t);
                bool found = false;

                do {
                    j--;
                    if(adc_map[j].port == aux_inputs->pins.inputs[i].port && adc_map[j].pin == aux_inputs->pins.inputs[i].pin) {

                        uint32_t adc = adc_map[j].adc;
                        int adc_idx = adc_index(adc);

                        if(adc_idx >= 0 && (!adc_initialized[adc_idx] || adc_init_peripheral(adc))) {

                            adc_initialized[adc_idx] = true;

                            gpio_mode_set((uint32_t)aux_inputs->pins.inputs[i].port, GPIO_MODE_ANALOG, GPIO_PUPD_NONE, aux_inputs->pins.inputs[i].bit);

                            aux_inputs->pins.inputs[i].adc = (void *)adc;
                            aux_inputs->pins.inputs[i].channel = adc_map[j].ch;
                            found = true;
                        }
                        break;
                    }
                } while(j);

                if(!found) {
                    aux_inputs->pins.inputs[i].adc = NULL;
                    analog.in.n_ports--;
                }
            }
        }

#if AUX_ANALOG_OUT

        if(analog.out.n_ports) {

            xbar_t *pin;
            uint_fast8_t i;
            pwm_config_t config = {
                .freq_hz = 5000.0f,
                .min = 0.0f,
                .max = 100.0f,
                .off_value = 0.0f,
                .min_value = 0.0f,
                .max_value = 100.0f,
                .invert = Off
            };

            for(i = 0; i < analog.out.n_ports; i++) {
                if((pin = get_pin_info(Port_Output, i)))
                    pin->config(pin, &config, false);
            }
        }

#endif // AUX_ANALOG_OUT
    }
}

void ioports_init_analog (pin_group_pins_t *aux_inputs, pin_group_pins_t *aux_outputs)
{
    (void)aux_inputs;
    (void)aux_outputs;
}
